--- a/client/radio/src/css/index.css
+++ b/client/radio/src/css/index.css
@@ -1,3 +1,4 @@
+/*
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -65,4 +66,11 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+*/
+
+html, body{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
