--- a/client/radio/src/css/NavBar.css
+++ b/client/radio/src/css/NavBar.css
@@ -1,33 +1,51 @@
 .navbar {
-    background-color: #322d2d;
-    padding: 1rem 2rem;
+    overflow: hidden;
+    background-color: #333;
+    padding: 30px 10px;
+    border-bottom: 1px solid #fff6e6ec;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .navbar-brand {
-    font-size: 1.5rem;
+    font-size: 27px;
     font-weight: bold;
+    color: white;
+    text-decoration: none;
+}
+
+.navbar-brand:hover{
+    transform: scale(1.1);
+    transition: transform .2s;
 }
 
 .navbar-links {
     display: flex;
     gap: 2rem;
+    float: right;
+    font-family: "Undertype", sans-serif;
 }
 
 .nav-link {
-    font-size: 1rem;
-    padding: 0.5rem 1rem;
+    color: white;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
     border-radius: 4px;
-    transition: background-color 0.2s;
+}
+
+.nav-link:visited {
+    color: white;
 }
 
 .nav-link:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+    transform: scale(1.2);
+    transition: transform 0.2s ease;
+    color: rgb(248, 189, 245);
 }
-
 
 @media (max-width: 768px) {
     .navbar {
