--- a/client/radio/src/index.css
+++ b/client/radio/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
+@plugin 'tailwindcss-spring';
 
 *{
     Font-family: 'Outfit', sans-serif;
