--- a/client/radio/src/index.css
+++ b/client/radio/src/index.css
@@ -6,3 +6,11 @@
 *{
     Font-family: 'Outfit', sans-serif;
 }
+
+.polka {
+    background-image:
+            radial-gradient(rgb(227, 227, 227) 10%, transparent 10%);
+    background-position: 20px 20px;
+    background-size: 40px 40px;
+    background-color: rgb(245, 245, 245);
+}
